Fix timeline on mobile

--- a/components/timeline/timeline.scss
+++ b/components/timeline/timeline.scss
@@ -66,17 +66,9 @@
 
 
 .escom-timeline__content-left-right {
-    display: flex;
 
     @media screen and (min-width: $esds-breakpoints-width-768) {
-        grid-gap: $esds-space-generic-2-x;
-        grid-template-columns: 20% 80%;
-    }
-
-    .escom-timeline--years-only & {
-        @media screen and (min-width: $esds-breakpoints-width-768) {
-            grid-template-columns: 10% 90%;
-        }
+        display: flex;
     }
 }
 
@@ -94,6 +86,12 @@
     @media screen and (min-width: $esds-breakpoints-width-768) {
         flex: 0 0 20%;
         margin-right: $esds-space-generic-2-x;
+    }
+
+    .escom-timeline--years-only & {
+        @media screen and (min-width: $esds-breakpoints-width-768) {
+            flex: 0 0 10%;
+        }
     }
 }
 
